Updated to match new JGIVE API + added an automatic retries to all fetch requests + added export.js to get an excel file of a specific campaign

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "jquery": "^3.7.1",
     "jquery-csv": "^1.0.40",
     "jsdom": "^25.0.1",
-    "tough-cookie": "^5.0.0"
+    "tough-cookie": "^5.0.0",
+    "xlsx": "^0.18.5"
   }
 }
